# Rusted-Lock

./: .env  .env.example  .gitignore  Cargo.toml  README.md
migrations/2025-02-11-132443_create_users/: up.sql
migrations/2025-02-15-162728_reset_login_attempts/: up.sql
migrations/2025-02-15-162908_trigger_login_attempts_reset/: up.sql
migrations/2025-02-15-222925_sessions/: down.sql  up.sql
migrations/2025-02-15-223831_user_sessions/: down.sql  up.sql
src/: config.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs
src/handlers/: forgot.rs  github.rs  google.rs  login.rs  login_handlers.rs  logout.rs  mod.rs  refresh.rs  register.rs  result_handler.rs  user_handlers.rs
src/middleware/: token_validator.rs
src/utils/: email.rs  error.rs  gen_refresh_token.rs  jwt.rs  jwt_validator.rs  mod.rs
