[package]
name = "Rusted-Lock"
version = "0.1.0"
edition = "2021"

[dependencies]

# Axum for routing and HTTP handling.
axum = { version = "0.8.1", features = ["json"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
# Tokio: asynchronous runtime.
tokio = { version = "1.36.0", features = ["full"] }

# Serde for JSON (de)serialization.
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Diesel ORM with PostgreSQL and r2d2 for connection pooling.
diesel = { version = "2.1.4", features = ["postgres", "r2d2","uuid","chrono"] }
dotenvy = "0.15.7"


tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

uuid = { version = "1.13.1", features = ["v4", "serde"] }

validator = { version = "0.20.0", features = ["derive"] }
lazy_static = { version = "1.5.0"}
regex = "1.11.1"

chrono = { version = "0.4.39", features = ["serde"] }
once_cell = "1.20.3"

bcrypt = "0.17.0"

jsonwebtoken = "7.0.1"
