[package]
name = "Rusted-Lock"
version = "0.1.0"
edition = "2021"

[dependencies]

# Axum for routing and HTTP handling.
axum = { version = "0.8.1", features = ["json"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }

# OAuth2 dependencies
oauth2 = "4.4.2"
reqwest = { version = "0.11", features = ["json"] }
# Tokio: asynchronous runtime.
tokio = { version = "1.36.0", features = ["full"] }

# Serde for JSON (de)serialization.
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Diesel ORM with PostgreSQL and r2d2 for connection pooling.
diesel = { version = "2.1.4", features = ["postgres", "r2d2","uuid","chrono"] }
dotenvy = "0.15.7"


tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

uuid = { version = "1.13.1", features = ["v4", "serde"] }

validator = { version = "0.20.0", features = ["derive"] }
lazy_static = { version = "1.5.0"}
regex = "1.11.1"

chrono = { version = "0.4.39", features = ["serde"] }
once_cell = "1.20.3"

bcrypt = "0.17.0"

jsonwebtoken = "7.0.1"

lettre = "0.11.13"
log = "0.4.25"